Replace horizontal scroll fix causing side effects with CSS fix

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
 body {
   overflow-x: hidden;
+}
+
+body {
+  position: relative
 }
 
 #root {
